# rust-lib-cpp

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md
include/: example.h
rust_lib/: Cargo.toml
